last minor changes in the translation file Kant

--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -605,7 +605,7 @@ msgstr ""
 "kategoryczny: \n"
 "        <i>“[…] Postępuj wedle takiej tylko zasady, "
 "co do której mógłbyś jednocześnie chcieć,"
-"        aby stała się prawem powszechnym.”</i> (Tatarkiewicz, Historia filozofii) "
+"        aby stała się prawem powszechnym.”</i> (W. Tatarkiewicz, 'Historia filozofii') "
 "<br>\n"
 "\n"
 "        <br><b>Co o tym sądzisz? W jakim stopniu należy kierować się tą "
